--- a/src/App.css
+++ b/src/App.css
@@ -76,8 +76,54 @@
 }
 
 
-  /* nav media queries */
-  @media (min-width: 320px) and (max-width: 480px) {
+
+  /* navbar ends */
+
+  .break{
+    width: 100%;
+    height: 50px;
+  }
+
+  /* HERO */
+
+  .hero-carousel {
+    margin-top: 50px; /* Adjust the value as necessary */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 660px; /* Ensure the hero section matches the image height */
+}
+
+.carousel-item img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.carousel-text {
+  position: absolute;
+  top: 30%;
+  left: 50px;
+  transform: translateY(-50%);
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.2); /* Add some text shadow for better readability */
+  max-width: 45%; /* Adjust as needed */
+}
+
+.carousel-text h2 {
+  font-size: 3.5em;
+  font-weight: bold;
+  margin: 0;
+}
+
+
+
+
+
+  /* nav media queries & Hero*/
+  @media (min-width: 330px) and (max-width: 480px) {
     .nav-links {
       display: none;
     }
@@ -162,11 +208,26 @@
   .enable-animation .marquee__content {
     animation: scroll 10s linear infinite;
   }
+
+  /* HERO MEDIA QUERIES */
+  .hero-carousel {
+    margin-top: 00px; /* Adjust the value as necessary */
+    height: 460px; /* Ensure the hero section matches the image height */
+}
+
+.carousel-item img {
+    height: 410px;
+}
+  .carousel-text{
+    top: 40%;
+    left: 5%;
+  }
+  .carousel-text h2 {
+    font-size: 1.8em;
+    text-align: left;
+    width: 290px;
+  }
   
 
 
   }
-
-
-  /* navbar ends */
-
