--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,68 @@
   margin: 0;
 }
 
+/* WELCOME TEXT*/
+.welcom{
+
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.para{
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.para-heading{
+  font-size: 2.5rem;
+  letter-spacing: 0.1pc;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  font-weight: 420;
+}
+
+.para p{
+  padding: 10px;
+  padding-top: 5px;
+  font-size: 1.3em;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+.shop-all{
+  border: none;
+  text-decoration: none;
+  border-bottom: 1px solid black;
+  text-transform: uppercase;
+  font-weight: 380;
+  color: #5f360f;
+  font-size: 1.2em;
+  padding: 3px 5px;
+}
+
+.headingList{
+  margin-top: 0px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  margin-bottom: 30px;
+}
+.headingList h3 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 380;
+}
+
 
 
 
@@ -227,6 +289,30 @@
     text-align: left;
     width: 290px;
   }
+
+  /* Welcome Text queries */
+  .welcom{
+    height: 350px;
+    text-align: center;
+  }
+
+  .para{
+    width: 100%;
+  }
+
+  .para-heading{
+    font-size: 2.3rem;}
+
+  .para p{
+    font-size: 1.2em;
+  }
+
+  .headingList h3 {
+    font-size: 2rem;
+  }
+  
+  
+
   
 
 
