--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,14 @@
 
   body {
     font-family: var(--font-family-base);
+    position: relative;
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
     font-weight: 400;
     font-style: normal;
+    
   }
+  
+
   
