--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 
+.app-container{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer{
+  margin-top: auto;
+  padding: 25px 0;
+}
+
+
   nav {
     background-color: #ce6301;
     border-bottom: 1px solid #ddd;
@@ -442,21 +454,19 @@
 
 /* FOOTER */
 .footer-container {
-  background-color: #333;
+  background-color: #ce6301;
   color: #fff;
   padding: 40px 20px;
 }
 
 .footer-top {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  border-bottom: 1px solid #444;
-  padding-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 450px);
+  grid-template-rows: 1fr;
+  border-bottom: 1px solid #c97b07;  
 }
 
 .footer-section {
-  flex: 1;
   margin: 0 20px;
   min-width: 200px;
 }
@@ -487,7 +497,7 @@
 
 .social-icons {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 
 .social-icons a {
@@ -751,7 +761,6 @@
     .recipe-container, .read{
       grid-template-columns: repeat(1, 380px);
       grid-template-rows: 1fr 1fr 1fr; 
-   
     }
     .article, .blog{
       display: flex;
@@ -763,8 +772,8 @@
   
     }
     .article img{
-      width: 350px;
-      height: 330px;
+      width: 335px;
+      height: 310px;
     }
     .recipe-title{
       font-size: 0.95em;
@@ -785,12 +794,73 @@
       width: 100%;
     }
     /* footer */  
-    .footer-container {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
+    .app-container{
+      display: flex;
+      flex-direction: column;
+      min-height: 100dvh;
     }
-      
+
+    .footer-container{
+      margin-top: auto;
+    }
+
+    .footer-container {
+      padding: 15px 2px;
+    }
+    .footer-top {
+      padding-bottom: 10px;
+    }
+    
+    .footer-section {
+      margin: 0 20px;
+      min-width: 180px;
+    }
+
+      .footer-section h3 {
+      margin-bottom: 10px;
+      font-size: 1.1em;
+      }
+    
+    .footer-section ul li {
+      margin-bottom: 10px;
+    }
+    .social-icons {
+      gap: 20px;
+    }
+    .social-icons a {
+      font-size: 1.3em;
+    }
+
+    .footer-bottom {
+      margin-top: 15px;
+      font-size: 0.9em;
+    }
+
+    .footer-container {
+      margin-top: 1000px; /* This pushes the footer to the bottom */
+    }
+
+    .footer-top {
+      display: grid;
+      grid-template-columns: repeat(2, 180px);
+      gap:12px;
+      grid-template-rows: 220px 80px;
+      border-bottom: 1px solid #c97b07;  
+      padding: 5px;
+      font-size: 0.92em;
+    }
+
+    .foot-about{
+      display: none;
+    }
+
+   
+
+ 
+
+
+
+
       
 
 
@@ -798,3 +868,9 @@
 
 
   }
+
+
+
+
+
+  
