--- a/src/App.css
+++ b/src/App.css
@@ -303,7 +303,6 @@
 }
 
 .quantity-selector button {
-  background-color: #e65b50;
   border: 1px solid #ccc;
   padding: 0px 15px;
   cursor: pointer;
@@ -454,10 +453,12 @@
 
 
 /* FOOTER */
+
+
 .footer-container {
   background-color: #ce6301;
   color: #fff;
-  padding: 40px 20px;
+  padding: 65px 20px;
 }
 
 .footer-top {
@@ -516,6 +517,27 @@
   margin-top: 20px;
   font-size: 0.9em;
 }
+/* footer back to top btn */
+.back-to-top-btn {
+  position: fixed;
+  font-size: 1.5em;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 18px;
+  background-color: #f7f7f7; /* Customize the color */
+  color: #ce6301;
+  border: none;
+  border-radius: 55%;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.back-to-top-btn:hover {
+  background-color: #ecba80; /* Darker color on hover */
+}
+
+
+
 
 /* PAGE ABOUT CSS */
 /* General Reset and Styling */
@@ -621,6 +643,7 @@
 
 .blogs-heading p{
   text-align: center;
+  margin-bottom: 1.5rem !important ;
 }
 
 .blog-grid {
@@ -942,7 +965,6 @@
   }
   
   .list {
-    display: grid;
     grid-template-columns: repeat(2, 180px); /* Four columns */
     grid-template-rows: repeat(4, 170px); /* Two rows with specific height */
     gap: 25px; /* Adjust the gap between grid items */
@@ -1114,7 +1136,6 @@
     }
 
     .footer-top {
-      display: grid;
       grid-template-columns: repeat(2, 180px);
       gap:12px;
       grid-template-rows: 220px 80px;
@@ -1155,7 +1176,7 @@
     }
 
     .blogs-container{
-      margin-top: 1.8rem;
+      margin-top: 2.5rem;
     }
 
     /* contact  */
@@ -1186,6 +1207,12 @@
       width: 95%;
     }
 
+    /* back to top btn */
+    .back-to-top-btn {
+      font-size: 1.3em;
+      padding: 8px 14px;
+    }
+    
    
 
  
